objects/SFDC_Channel_Budget__c.object
<CustomObject><fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Allocated__c</fullName>
        <description>Total amount that is allocated. Manual entry.</description>
        <label>Allocated</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Market Development Funds</relationshipLabel>
        <relationshipName>Market_Development_Funds</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Last_Refresh_Date__c</fullName>
        <description>The date &amp; time the checkbook was last refreshed.</description>
        <label>Last Refresh Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Refresh__c</fullName>
        <description>Refreshes the budget balances by adding up the approved requests and claims from the related lists.</description>
        <formula>HYPERLINK("/servlet/servlet.Integration?lid=01N41000000ZIfE&amp;eid=" &amp; Id , IMAGE("/servlet/servlet.FileDownload?file=01541000001Qwv0", "Refresh Budget Balances"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Refresh Balances</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Remaining__c</fullName>
        <formula>Allocated__c -  Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Requested__c</fullName>
        <description>Rollup of the total amount requests against this fund.</description>
        <label>Requested</label>
        <summarizedField>SFDC_MDF__c.Amount__c</summarizedField>
        <summaryForeignKey>SFDC_MDF__c.Market_Development_Fund__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Stipend: A monthly/quarterly/annual amount
Fixed Quantity: Access to a fixed number of resources or services
Discount: Subsidized marketing programs
Rebate: Reimbursement for approved expenditures</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Stipend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Quantity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Market development funds for Channel Partners.</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>MDF</label><nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField><pluralLabel>MDF</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Allocated__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>AvailableBudget</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Allocated__c</columns>
        <filterScope>Everything</filterScope>
        <label>Available Budget</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>OverspentBudget</fullName>
        <columns>NAME</columns>
        <columns>Allocated__c</columns>
        <filterScope>Everything</filterScope>
        <label>Overspent Budget</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>UnclaimedRequests</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Unclaimed Requests</label>
        <language>en_US</language>
    </listViews></CustomObject>